fix(AMG-006): retirando animação da lib aos

--- a/src/app/modules/about/components/about-page/about-page.component.html
+++ b/src/app/modules/about/components/about-page/about-page.component.html
@@ -1,6 +1,6 @@
 <div class="pag">
   <div class="pag__center">
-    <p class="text__bold" data-aos="fade-up">
+    <p class="text__bold"  >
       <span routerLink="/" (click)="defaultService.backToTop()" style="cursor: pointer;">início </span>
       / sobre nós</p>
 
