--- a/src/app/modules/home/components/home-page-initial/home-page-initial.component.html
+++ b/src/app/modules/home/components/home-page-initial/home-page-initial.component.html
@@ -1,14 +1,14 @@
 <div class="aling__top">
   <div class="pag__center">
     <div class="d-flex justify-content-center flex-column">
-      <span class="text__title" data-aos="fade-up"
+      <span class="text__title"
         >Construindo o futuro
-        <span class="text__subtitle-white" data-aos="fade-up">
+        <span class="text__subtitle-white"  >
           através da <br />
           tecnologia e inovação
         </span>
       </span>
-      <p class="text__white-desc" data-aos="fade-up">
+      <p class="text__white-desc"  >
         Conectamos sua empresa com o mundo da tecnologia em tempo hábil
       </p>
       <app-default-button
