--- a/src/app/modules/solutions/components/solutions-page-your-projects/solutions-page-your-projects.component.html
+++ b/src/app/modules/solutions/components/solutions-page-your-projects/solutions-page-your-projects.component.html
@@ -1,8 +1,8 @@
-<div class="pag w-100 section--third" style="background-color: #587b52" data-aos="fade-up">
+<div class="pag w-100 section--third" style="background-color: #587b52"  >
   <div
     class="aling__box d-flex justify-content-center align-items-center flex-column default-container"
   >
-    <p class="text__title text-center default-container pb-4" data-aos="fade-up">
+    <p class="text__title text-center default-container pb-4"  >
       Seus projetos com produtividade, agilidade e redução de custos.
     </p>
        <app-default-button
