--- a/src/app/shared/components/default-modal/default-modal.component.html
+++ b/src/app/shared/components/default-modal/default-modal.component.html
@@ -3,7 +3,7 @@
     <div class="d-flex justify-content-end">
       <button type="button" class="btn-close" aria-label="Close" (click)="OpenCloseModal.emit()"></button>
     </div>
-    <ng-content data-aos="fade-up"></ng-content>
+    <ng-content  ></ng-content>
   </div>
   <div class="overlay-a" (click)="OpenCloseModal.emit()">
   </div>
