--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -2,7 +2,7 @@
 
     <div class="menu--top bg-dark">
       <nav class="default-container d-flex justify-content-between">
-        <div class="hover-underline-animation py-2" *ngFor="let item of menu" data-aos="fade-up"
+        <div class="hover-underline-animation py-2" *ngFor="let item of menu"
         routerLink="{{item.route}}"
         (click)="defaultService.backToTop()">
           {{item.name}}
@@ -12,8 +12,8 @@
 
   <div class="default-container menu--bottom d-flex justify-content-between">
         <div class="d-flex align-items-center">
-        <img class="logo-4 py-2" src="assets/svg/LOGO 4.svg" data-aos="fade-up" (click)="defaultService.backToTop()" alt="amg" routerLink="/home">
+        <img class="logo-4 py-2" src="assets/svg/LOGO 4.svg"   (click)="defaultService.backToTop()" alt="amg" routerLink="/home">
         </div>
-    <span class="d-flex text-center align-items-center" data-aos="fade-up">Todos os direitos reservados <br> ANGULAR MONEY GROUP &copy; {{year}}.</span>
+    <span class="d-flex text-center align-items-center"  >Todos os direitos reservados <br> ANGULAR MONEY GROUP &copy; {{year}}.</span>
   </div>
 </footer>
