--- a/src/app/modules/about/components/about-page-virtue/about-page-virtue.component.html
+++ b/src/app/modules/about/components/about-page-virtue/about-page-virtue.component.html
@@ -1,13 +1,13 @@
 <div class="d-flex about--content pb-5">
   <div class="box__attr">
     <img
-    data-aos="fade-up"
+
       src="assets/gifs/completo.gif"
       alt=""
       width="70px"
     />
-    <div class="mx-1 my-1 text__bold" data-aos="fade-up">Missão</div>
-    <p class="mx-1 text__desc" data-aos="fade-up">
+    <div class="mx-1 my-1 text__bold"  >Missão</div>
+    <p class="mx-1 text__desc"  >
       Utilizar a tecnologia da informação para criar,
       desenvolver e atualizar produtos e serviços no ambiente de negócios,
       trazendo ao mercado soluções que aumentam a competitividade e lucratividade de nossas organizações.
@@ -15,9 +15,9 @@
   </div>
 
   <div class="box__attr">
-    <img src="assets/gifs/alvo.gif" alt="" width="70px" data-aos="fade-up" />
-    <div class="mx-1 my-1 text__bold" data-aos="fade-up">Visão</div>
-    <p class="mx-1 text__desc" data-aos="fade-up">
+    <img src="assets/gifs/alvo.gif" alt="" width="70px"   />
+    <div class="mx-1 my-1 text__bold"  >Visão</div>
+    <p class="mx-1 text__desc"  >
       Crescer como uma empresa rentável e inovadora,
       que oferece qualidade de vida aos colaboradores e
       promove a mudança da sociedade com base nas novas tecnologias
@@ -27,22 +27,22 @@
 
   <div class="box__attr">
     <img
-    data-aos="fade-up"
+
       src="assets/gifs/lista-de-controle.gif"
       alt=""
       width="70px"
     />
-    <div class="mx-1 my-1 text__bold" data-aos="fade-up">Valores</div>
-    <p class="mx-1 text__desc" data-aos="fade-up">
+    <div class="mx-1 my-1 text__bold"  >Valores</div>
+    <p class="mx-1 text__desc"  >
       Honestidade, Espirito de Equipe, Confiança e Credibilidade, Ética,
       Comprometimento, Inovação
     </p>
   </div>
 
   <div class="box__attr">
-    <img src="assets/gifs/foguete.gif" alt="" width="70px" data-aos="fade-up" />
-    <div class="mx-1 my-1 text__bold" data-aos="fade-up">Propósito</div>
-    <p class="mx-1 text__desc" data-aos="fade-up">
+    <img src="assets/gifs/foguete.gif" alt="" width="70px"   />
+    <div class="mx-1 my-1 text__bold"  >Propósito</div>
+    <p class="mx-1 text__desc"  >
       Nosso propósito é fazer com que nossas tecnologias tragam resultados para toda sociedade.
     </p>
   </div>
