--- a/src/app/modules/home/components/home-page-hiring/home-page-hiring.component.html
+++ b/src/app/modules/home/components/home-page-hiring/home-page-hiring.component.html
@@ -1,29 +1,29 @@
 <div class="aling__call section--second">
   <div class="pag__center section--second--content">
-    <p class="text__green" data-aos="fade-up">Trabalhe conosco</p>
+    <p class="text__green"  >Trabalhe conosco</p>
 
-    <div class="d-flex pb-4 gap-3" data-aos="fade-up">
-      <div class="box__white m-0" data-aos="fade-up">
-        <img src="assets/icons/icon-call-1.svg" width="48px"data-aos="fade-up" />
-        <p class="text__default mt-2" data-aos="fade-up">Potencial de crescimento.</p>
-        <p class="text__desc" data-aos="fade-up">
+    <div class="d-flex pb-4 gap-3"  >
+      <div class="box__white m-0"  >
+        <img src="assets/icons/icon-call-1.svg" width="48px"  />
+        <p class="text__default mt-2"  >Potencial de crescimento.</p>
+        <p class="text__desc"  >
           Acreditamos que somos uma empresa com grande potencial de
           crescimento no mercado, oferecendo desenvolvedores, equipes e
           soluções para as necessidades de cada cliente
         </p>
       </div>
-      <div class="box__white m-0" data-aos="fade-up">
-        <img src="assets/icons/Icon-call-2.svg" width="48px" data-aos="fade-up"/>
-        <p class="text__default mt-2" data-aos="fade-up">Feito de pessoas para pessoas.</p>
-        <p class="text__desc" data-aos="fade-up">
+      <div class="box__white m-0"  >
+        <img src="assets/icons/Icon-call-2.svg" width="48px"  />
+        <p class="text__default mt-2"  >Feito de pessoas para pessoas.</p>
+        <p class="text__desc"  >
           Quando todos estão bem, há equilíbrio entre vida pessoal e profissional,
            criamos uma relação próxima onde todos ganham.
         </p>
       </div>
-      <div class="box__white m-0" data-aos="fade-up">
+      <div class="box__white m-0"  >
         <img src="assets/icons/icon-call-3.svg" width="48px" />
-        <p class="text__default mt-2" data-aos="fade-up">Apaixonados pelo que fazemos.</p>
-        <p class="text__desc" data-aos="fade-up">
+        <p class="text__default mt-2"  >Apaixonados pelo que fazemos.</p>
+        <p class="text__desc"  >
           Aqui temos pessoas apaixonadas pelo que fazem, acreditando no
           potencial de cada um da nossa equipe.
         </p>
