--- a/src/app/modules/home/components/home-page-suggestion/home-page-suggestion.component.html
+++ b/src/app/modules/home/components/home-page-suggestion/home-page-suggestion.component.html
@@ -1,8 +1,8 @@
-<div class="aling__center section--forth bg-white py-5" data-aos="fade-up">
+<div class="aling__center section--forth bg-white py-5"  >
   <div class="pag__center d-flex section--forth--content p-5 rounded-3" style="background-color:#EEEEEE;">
     <div class="d-flex text-center justify-content-center flex-column w-100">
-      <p class="text__green" data-aos="fade-up">Por meio do menu abaixo você pode fazer seu relato ou sua sugestão. </p>
-      <p class="text__default h5" data-aos="fade-up">
+      <p class="text__green"  >Por meio do menu abaixo você pode fazer seu relato ou sua sugestão. </p>
+      <p class="text__default h5"  >
         Neste campo abaixo você pode nos enviar uma mensagem de forma anônima para fazer uma sugestão, reclamação ou relato. Caso queira contatar diretamente à empresa, utilize a aba de contato.
       </p>
       <div>
