--- a/src/app/modules/solutions/components/solutions-page-why-choose/solutions-page-why-choose.component.html
+++ b/src/app/modules/solutions/components/solutions-page-why-choose/solutions-page-why-choose.component.html
@@ -1,19 +1,19 @@
 <div class="pag__center d-flex section--second py-5">
   <div class="w-50 aling__solutions mr-4">
     <img
-    data-aos="fade-up"
+
       src="assets/backgrounds/bg-solu-mid.svg"
       alt="bg-solu-mid"
       width="100%"
     />
   </div>
   <div class="w-50 aling__texts">
-    <h3 class="text__green-title mt-3" data-aos="fade-up">
+    <h3 class="text__green-title mt-3"  >
       Por que escolher uma
       squad ágil para seu
       projeto?
     </h3>
-    <p class="mt-1 text__solution" data-aos="fade-up">
+    <p class="mt-1 text__solution"  >
       Seguir um modelo de trabalho mais utilizado hoje em desenvolvimento de
       software na área de tecnologia, é a metodologia ágil, seguindo o fluxo
       de serviço conforme a imagem. Na AMG, você define a sua equipe, conforme
