--- a/src/app/shared/components/curriculum-form/curriculum-form.component.html
+++ b/src/app/shared/components/curriculum-form/curriculum-form.component.html
@@ -1,4 +1,4 @@
-<form class="w-100" [formGroup]="form" data-aos="fade-up" enctype="multipart/form-data">
+<form class="w-100" [formGroup]="form"   enctype="multipart/form-data">
   <div>
     <input
       type="email"
