atualização da qualidade e tipo das imagens de fundo

--- a/src/app/modules/home/components/home-page-initial/home-page-initial.component.scss
+++ b/src/app/modules/home/components/home-page-initial/home-page-initial.component.scss
@@ -12,7 +12,7 @@
   &__top{
     width: 100%;
     padding: 320px 0;
-    background-image: url('../../../../../assets/backgrounds/bg-top.svg');
+    background-image: url('../../../../../assets/backgrounds/bg-top.webp');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 80% 40%;
@@ -64,7 +64,7 @@
     width: 100%;
     height: 100px;
     background-repeat: no-repeat;
-    background-image: url('../../../../../assets/backgrounds/bg-mid.png');
+    background-image: url('../../../../../assets/backgrounds/bg-mid.webp');
   }
 }
 
