--- a/src/app/modules/hiring/components/hiring-page-initial/hiring-page-initial.component.scss
+++ b/src/app/modules/hiring/components/hiring-page-initial/hiring-page-initial.component.scss
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100%;
     padding: 25px 0px 160px 0px;
-    background-image: url('../../../../../assets/backgrounds/bg-work.jpg');
+    background-image: url('../../../../../assets/backgrounds/bg-work.webp');
     background-size: cover;
     background-repeat: no-repeat;
   }
