--- a/src/app/modules/home/components/home-page-hiring/home-page-hiring.component.scss
+++ b/src/app/modules/home/components/home-page-hiring/home-page-hiring.component.scss
@@ -12,7 +12,7 @@
   &__top{
     width: 100%;
     padding: 320px 0;
-    background-image: url('../../../../../assets/backgrounds/bg-top.svg');
+    background-image: url('../../../../../assets/backgrounds/bg-top.webp');
     background-size: cover;
     background-repeat: no-repeat;
   }
@@ -63,7 +63,7 @@
     width: 100%;
     height: 100px;
     background-repeat: no-repeat;
-    background-image: url('../../../../../assets/backgrounds/bg-mid.png');
+    background-image: url('../../../../../assets/backgrounds/bg-mid.webp');
   }
 }
 
