--- a/src/app/modules/contact/components/contact-page/contact-page.component.html
+++ b/src/app/modules/contact/components/contact-page/contact-page.component.html
@@ -6,7 +6,7 @@
       <app-contact-form data-aos="fade-up"></app-contact-form>
     </div>
     <div class="d-flex justify-content-end w-50 content--image">
-      <img src="assets/backgrounds/contact-background.png" data-aos="fade-up" alt="">
+      <img loading=lazy src="assets/backgrounds/contact-background.png" data-aos="fade-up" alt="">
     </div>
   </div>
   <div class=" banner py-4">
