--- a/src/app/modules/home/components/home-page-sustainability/home-page-sustainability.component.html
+++ b/src/app/modules/home/components/home-page-sustainability/home-page-sustainability.component.html
@@ -4,7 +4,7 @@
     <p class="text__default" data-aos="fade-up">Algumas iniciativas:</p>
     <div class="d-flex gap-3">
       <div class="box__bot m-0" data-aos="fade-up">
-        <img
+        <img loading=lazy
           data-aos="fade-up"
           src="assets/backgrounds/bg-agua.webp"
           alt=""
@@ -18,7 +18,7 @@
       </div>
 
       <div class="box__bot m-0" data-aos="fade-up">
-        <img
+        <img loading=lazy
           src="assets/backgrounds/bg-talk.webp"
           alt=""
           class="mb-3"
