implementar lazy loading nas imagens

--- a/src/app/shared/components/default-carousel/default-carousel.component.html
+++ b/src/app/shared/components/default-carousel/default-carousel.component.html
@@ -1,7 +1,7 @@
 <ngb-carousel class="m-4">
 	<ng-template ngbSlide>
 		<div class="picsum-img-wrapper" *ngFor="let photo of carouselConfig.imageUrls let i = index">
-			<img class="d-block w-100" src="../../../../assets/svg/rooms/sala-10.svg"  alt="Random first slide" />
+			<img lazy="loading" class="d-block w-100" src="../../../../assets/svg/rooms/sala-10.svg"  alt="Random first slide" />
 		</div>
 		<div class="carousel-caption">
 			<h3>First slide label</h3>
@@ -10,7 +10,7 @@
 	</ng-template>
 	<!-- <ng-template ngbSlide>
 		<div class="picsum-img-wrapper">
-			<img class="d-block w-100" src="../../../../assets/svg/rooms/Sala 6.png" alt="Random second slide" />
+			<img lazy="loading" class="d-block w-100" src="../../../../assets/svg/rooms/Sala 6.png" alt="Random second slide" />
 		</div>
 		<div class="carousel-caption">
 			<h3>Second slide label</h3>
@@ -19,7 +19,7 @@
 	</ng-template>
 	<ng-template ngbSlide>
 		<div class="picsum-img-wrapper">
-			<img class="d-block w-100" src="../../../../assets/svg/rooms/Sala 7.png" alt="Random third slide" />
+			<img lazy="loading" class="d-block w-100" src="../../../../assets/svg/rooms/Sala 7.png" alt="Random third slide" />
 		</div>
 		<div class="carousel-caption">
 			<h3>Third slide label</h3>
