--- a/src/app/modules/solutions/components/solutions-page-why-contract/solutions-page-why-contract.component.html
+++ b/src/app/modules/solutions/components/solutions-page-why-contract/solutions-page-why-contract.component.html
@@ -12,6 +12,6 @@
       <li class="text__solution" data-aos="fade-up">Custo fixo.</li>
     </ul>
   </div>
-    <img src="assets/backgrounds/bg-solu-bot.svg" alt="bg-solu-bot"
+    <img lazy="loading" src="assets/backgrounds/bg-solu-bot.svg" alt="bg-solu-bot"
     width="70%" data-aos="fade-up">
 </div>
