--- a/src/app/modules/home/components/home-page-hiring/home-page-hiring.component.html
+++ b/src/app/modules/home/components/home-page-hiring/home-page-hiring.component.html
@@ -4,7 +4,7 @@
 
     <div class="d-flex pb-4 gap-3" data-aos="fade-up">
       <div class="box__white m-0" data-aos="fade-up">
-        <img lazy="loading" src="assets/icons/icon-call-1.svg" width="48px"data-aos="fade-up" />
+        <img load="lazing" src="assets/icons/icon-call-1.svg" width="48px"data-aos="fade-up" />
         <p class="text__default mt-2" data-aos="fade-up">Potencial de crescimento.</p>
         <p class="text__desc" data-aos="fade-up">
           Acreditamos que somos uma empresa com grande potencial de
@@ -13,7 +13,7 @@
         </p>
       </div>
       <div class="box__white m-0" data-aos="fade-up">
-        <img lazy="loading" src="assets/icons/Icon-call-2.svg" width="48px" data-aos="fade-up"/>
+        <img load="lazing" src="assets/icons/Icon-call-2.svg" width="48px" data-aos="fade-up"/>
         <p class="text__default mt-2" data-aos="fade-up">Feito de pessoas para pessoas.</p>
         <p class="text__desc" data-aos="fade-up">
           Quando todos estão bem, há equilíbrio entre vida pessoal e profissional,
@@ -21,7 +21,7 @@
         </p>
       </div>
       <div class="box__white m-0" data-aos="fade-up">
-        <img lazy="loading" src="assets/icons/icon-call-3.svg" width="48px" />
+        <img load="lazing" src="assets/icons/icon-call-3.svg" width="48px" />
         <p class="text__default mt-2" data-aos="fade-up">Apaixonados pelo que fazemos.</p>
         <p class="text__desc" data-aos="fade-up">
           Aqui temos pessoas apaixonadas pelo que fazem, acreditando no
