--- a/src/app/modules/hiring/components/hiring-page-curriculum/hiring-page-curriculum.component.html
+++ b/src/app/modules/hiring/components/hiring-page-curriculum/hiring-page-curriculum.component.html
@@ -14,6 +14,6 @@
   </div>
 
   <div class="w-50 d-flex align-items-center curriculum--img" data-aos="fade-up">
-    <img lazy="loading" src="assets/backgrounds/hiring-image.jpg" width="100%" alt="">
+    <img load="lazing" src="assets/backgrounds/hiring-image.jpg" width="100%" alt="">
   </div>
 </div>
