atualização do tipo das imagens de fundo

--- a/src/app/modules/home/components/home-page-sustainability/home-page-sustainability.component.html
+++ b/src/app/modules/home/components/home-page-sustainability/home-page-sustainability.component.html
@@ -6,7 +6,7 @@
       <div class="box__bot m-0" data-aos="fade-up">
         <img load="lazing"
           data-aos="fade-up"
-          src="assets/backgrounds/bg-agua.svg"
+          src="assets/backgrounds/bg-agua.webp"
           alt=""
           class="mb-3"
           width="100%"
@@ -19,7 +19,7 @@
 
       <div class="box__bot m-0" data-aos="fade-up">
         <img load="lazing"
-          src="assets/backgrounds/bg-talk.svg"
+          src="assets/backgrounds/bg-talk.webp"
           alt=""
           class="mb-3"
           width="100%"
