--- a/src/app/modules/home/components/home-page-we-are/home-page-we-are.component.html
+++ b/src/app/modules/home/components/home-page-we-are/home-page-we-are.component.html
@@ -17,6 +17,6 @@
       (click)="defaultService.backToTop()"
       ></app-default-button>
     </div>
-    <img load="lazing" src="assets/backgrounds/bg-mid.png" class="imagem" alt="" width="50%" data-aos="fade-up"/>
+    <img load="lazing" src="assets/backgrounds/bg-mid.webp" class="imagem" alt="" width="50%" data-aos="fade-up"/>
   </div>
 </div>
