--- a/src/app/modules/solutions/components/solutions-page-why-choose/solutions-page-why-choose.component.html
+++ b/src/app/modules/solutions/components/solutions-page-why-choose/solutions-page-why-choose.component.html
@@ -2,7 +2,7 @@
   <div class="w-50 aling__solutions mr-4">
     <img load="lazing"
     data-aos="fade-up"
-      src="assets/backgrounds/bg-solu-mid.svg"
+      src="assets/backgrounds/bg-solu-mid.webp"
       alt="bg-solu-mid"
       width="100%"
     />
