--- a/src/app/modules/solutions/components/solutions-page-need-devs/solutions-page-need-devs.component.html
+++ b/src/app/modules/solutions/components/solutions-page-need-devs/solutions-page-need-devs.component.html
@@ -1,5 +1,5 @@
 <div class="pag__center d-flex section--first py-5">
-  <img load="lazing"
+  <img load="lazy"
   data-aos="fade-up"
     src="assets/backgrounds/bg-solu-top-1.png"
     alt="bg-solutions"
