update lazy loading nas imagens de fundo

--- a/src/app/modules/solutions/components/solutions-page-why-choose/solutions-page-why-choose.component.html
+++ b/src/app/modules/solutions/components/solutions-page-why-choose/solutions-page-why-choose.component.html
@@ -1,6 +1,6 @@
 <div class="pag__center d-flex section--second py-5">
   <div class="w-50 aling__solutions mr-4">
-    <img load="lazy"
+    <img loading="lazy"
     data-aos="fade-up"
       src="assets/backgrounds/bg-solu-mid.webp"
       alt="bg-solu-mid"
