Correção do footer e inserção das meta tags

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -5,10 +5,10 @@
   <div class="default-container">
     <div class="d-flex justify-content-between logos">
       <div *ngIf="router.url === '/home'" routerLink="/home" (click)="defaultService.backToTop()">
-        <img loading="lazy" src="assets/logo-amg_white.svg" width="90" alt="" />
+        <img loading="lazy" src="assets/logo-amg_white.svg" width="90" alt="logo-AMG" />
       </div>
       <div *ngIf="router.url !== '/home'" routerLink="/home" (click)="defaultService.backToTop()">
-        <img loading="lazy" src="assets/svg/LOGO 5.svg" width="90" alt="" />
+        <img loading="lazy" src="assets/svg/LOGO 5.svg" width="90" alt="logo-AMG" />
       </div>
       <div class="menu">
         <nav class="menu--nav d-flex">
