--- a/src/app/modules/about/components/about-page-virtue/about-page-virtue.component.html
+++ b/src/app/modules/about/components/about-page-virtue/about-page-virtue.component.html
@@ -3,7 +3,7 @@
     <img loading="lazy"
     data-aos="fade-up"
       src="assets/gifs/completo.gif"
-      alt=""
+      alt="completo"
       width="70px"
     />
     <div class="mx-1 my-1 text__bold" data-aos="fade-up">Missão</div>
@@ -15,7 +15,7 @@
   </div>
 
   <div class="box__attr">
-    <img loading="lazy" src="assets/gifs/alvo.gif" alt="" width="70px" data-aos="fade-up" />
+    <img loading="lazy" src="assets/gifs/alvo.gif" alt="alvo" width="70px" data-aos="fade-up" />
     <div class="mx-1 my-1 text__bold" data-aos="fade-up">Visão</div>
     <p class="mx-1 text__desc" data-aos="fade-up">
       Crescer como uma empresa rentável e inovadora,
@@ -29,7 +29,7 @@
     <img loading="lazy"
     data-aos="fade-up"
       src="assets/gifs/lista-de-controle.gif"
-      alt=""
+      alt="lista-de-controle"
       width="70px"
     />
     <div class="mx-1 my-1 text__bold" data-aos="fade-up">Valores</div>
@@ -40,7 +40,7 @@
   </div>
 
   <div class="box__attr">
-    <img loading="lazy" src="assets/gifs/foguete.gif" alt="" width="70px" data-aos="fade-up" />
+    <img loading="lazy" src="assets/gifs/foguete.gif" alt="foguete" width="70px" data-aos="fade-up" />
     <div class="mx-1 my-1 text__bold" data-aos="fade-up">Propósito</div>
     <p class="mx-1 text__desc" data-aos="fade-up">
       Nosso propósito é fazer com que nossas tecnologias tragam resultados para toda sociedade.
