--- a/src/app/modules/home/components/home-page-sustainability/home-page-sustainability.component.html
+++ b/src/app/modules/home/components/home-page-sustainability/home-page-sustainability.component.html
@@ -7,7 +7,7 @@
         <img loading="lazy"
           data-aos="fade-up"
           src="assets/backgrounds/bg-agua.webp"
-          alt=""
+          alt="sustentabilidade-agua"
           class="mb-3"
           width="100%"
         />
@@ -20,7 +20,7 @@
       <div class="box__bot m-0" data-aos="fade-up">
         <img loading="lazy"
           src="assets/backgrounds/bg-talk.webp"
-          alt=""
+          alt="sustentabilidade-ong"
           class="mb-3"
           width="100%"
           data-aos="fade-up"
