--- a/src/app/modules/home/components/home-page-we-are/home-page-we-are.component.scss
+++ b/src/app/modules/home/components/home-page-we-are/home-page-we-are.component.scss
@@ -63,7 +63,7 @@
     width: 100%;
     height: 100px;
     background-repeat: no-repeat;
-    background-image: url('../../../../../assets/backgrounds/bg-mid.webp');
+    background-image: url('../../../../../assets/backgrounds/bg-mid.png');
   }
 }
 
