--- a/src/app/modules/about/components/about-page/about-page.component.html
+++ b/src/app/modules/about/components/about-page/about-page.component.html
@@ -1,4 +1,4 @@
-<div class="pag">
+<div class="pag min-vh-100">
   <div class="pag__center">
     <p class="text__bold" data-aos="fade-up">
       <span routerLink="/" (click)="defaultService.backToTop()" style="cursor: pointer;">início </span>
