--- a/src/app/modules/home/components/home-page/home-page.component.scss
+++ b/src/app/modules/home/components/home-page/home-page.component.scss
@@ -63,7 +63,7 @@
     width: 100%;
     height: 100px;
     background-repeat: no-repeat;
-    background-image: url('../../../../../assets/backgrounds/bg-mid.png');
+    background-image: url('../../../../../assets/backgrounds/bg-mid.webp');
   }
 }
 @media (max-width:950px){
