Correção das imagens e textos

--- a/src/app/modules/about/components/about-page-we/about-page-we.component.html
+++ b/src/app/modules/about/components/about-page-we/about-page-we.component.html
@@ -1,12 +1,12 @@
 <div class="d-flex text-center flex-column">
-  <p class="text__green mt-3 mb-3" data-aos="fade-up">Sobre nós</p>
-  <p class="text__opc-title" data-aos="fade-up">
+  <p class="text__green-title mt-3 mb-3" data-aos="fade-up">Sobre nós</p>
+  <p class="text__default" data-aos="fade-up">
     Fundada em 2019, a Angular Money Group é uma empresa voltada á
     desenvolvimento de website e aplicativos. Tendo como seu principal carro
     chefe o front end no framework angular.
   </p>
   <p class="text__subtitle" data-aos="fade-up">
     Atualmente, somos uma equipe com mais de 20 desenvolvedores, com sede em
-    Uberlândia, atendemos clientes em todo o país, e também internacionais.
+    Uberlândia, atendemos clientes em todo o país, e também internacionalmente.
   </p>
 </div>
