--- a/src/app/modules/hiring/components/hiring-page-initial/hiring-page-initial.component.html
+++ b/src/app/modules/hiring/components/hiring-page-initial/hiring-page-initial.component.html
@@ -6,7 +6,7 @@
 
   <div class="pag__center">
     <div class="d-flex flex-column">
-      <p class="text__title-black mt-5 mb-3" data-aos="fade-up">
+      <p class="text__green-title mt-5 mb-3" data-aos="fade-up">
         O seu futuro está aqui.
       </p>
       <p class="text__default" data-aos="fade-up">
