--- a/src/app/modules/solutions/components/solutions-page-need-devs/solutions-page-need-devs.component.html
+++ b/src/app/modules/solutions/components/solutions-page-need-devs/solutions-page-need-devs.component.html
@@ -1,9 +1,10 @@
 <div class="pag__center d-flex section--first py-5">
   <img loading="lazy"
   data-aos="fade-up"
-    src="assets/backgrounds/bg-solu-top-1.png"
+    src="assets/backgrounds/bg-solu-top-1.webp"
     alt="bg-solutions"
     width="50%"
+
   />
   <div class="w-50 aling__solutions">
     <h3 class="text__green-title text-break " data-aos="fade-up">
@@ -11,7 +12,7 @@
       desenvolvedores, ou de
       squads para seu produto?
     </h3>
-    <p class="text__green-subtitle mt-5 " data-aos="fade-up">
+    <p class="text__default mt-5 " data-aos="fade-up">
       Montamos um time de acordo com sua
       necessidade seguindo a melhor forma
       ágil de trabalhar.
