--- a/src/app/modules/solutions/components/solutions-page-why-contract/solutions-page-why-contract.component.html
+++ b/src/app/modules/solutions/components/solutions-page-why-contract/solutions-page-why-contract.component.html
@@ -1,5 +1,5 @@
-<div class="pag__center d-flex section--fourth">
-  <div class="aling__bot">
+<div class="pag__center d-flex section--fourth py-5">
+  <div class="aling__bot w-50">
     <p class="text__green-title" data-aos="fade-up">Por que contratar pela AMG?</p>
     <p class="text__solution" data-aos="fade-up">
       Somos profissionais especialistas na área de tecnologia.
@@ -13,5 +13,5 @@
     </ul>
   </div>
     <img loading="lazy" src="assets/backgrounds/bg-solu-bot.webp" alt="bg-solu-bot"
-    width="70%" data-aos="fade-up">
+    width="50%" class="pb-3"  data-aos="fade-up">
 </div>
