Correção footer e imagens do componente solutions

--- a/src/app/modules/solutions/components/solutions-page-why-contract/solutions-page-why-contract.component.html
+++ b/src/app/modules/solutions/components/solutions-page-why-contract/solutions-page-why-contract.component.html
@@ -12,6 +12,8 @@
       <li class="text__solution" data-aos="fade-up">Custo fixo.</li>
     </ul>
   </div>
-    <img loading="lazy" src="assets/backgrounds/bg-solu-bot.webp" alt="bg-solu-bot"
-    width="50%" class="pb-3"  data-aos="fade-up">
+    <div class="w-50 py-2">
+      <img loading="lazy" src="assets/backgrounds/bg-solu-bot.webp" alt="bg-solu-bot"
+      width="90%" class="pb-3 px-5"  data-aos="fade-up">
+    </div>
 </div>
