--- a/src/app/modules/solutions/components/solutions-page-why-contract/solutions-page-why-contract.component.scss
+++ b/src/app/modules/solutions/components/solutions-page-why-contract/solutions-page-why-contract.component.scss
@@ -54,10 +54,11 @@
         display: none;
       }
       .aling__bot{
-        width: 100%;
+        width: 100%!important;
       }
     }
   }
+
 }
 
 @media (max-width:950px){
