--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -9,7 +9,7 @@
         </nav>
       </div>
 
-    <div class="default-container menu--bottom d-flex justify-content-between">
+    <div class="w-100 default-container menu--bottom d-flex justify-content-between">
           <div class="d-flex align-items-center">
           <img loading="lazy" class="logo-4 py-2" src="assets/svg/LOGO 4.svg" data-aos="fade-up" (click)="defaultService.backToTop()" alt="amg" routerLink="/home">
           </div>
