--- a/src/app/modules/solutions/components/solutions-page-need-devs/solutions-page-need-devs.component.html
+++ b/src/app/modules/solutions/components/solutions-page-need-devs/solutions-page-need-devs.component.html
@@ -1,13 +1,15 @@
-<div class="pag__center d-flex section--first py-5">
-  <img loading="lazy"
-  data-aos="fade-up"
-    src="assets/backgrounds/bg-solu-top-1.webp"
-    alt="bg-solutions"
-    width="50%"
+<div class="pag__center d-flex  section--first py-5">
+<div class="w-50 py-2">
+    <img loading="lazy"
+    data-aos="fade-up"
+      src="assets/backgrounds/bg-solu-top-1.webp"
+      alt="bg-solutions"
+    width="100%"
 
-  />
-  <div class="w-50 aling__solutions">
-    <h3 class="text__green-title text-break " data-aos="fade-up">
+    />
+</div>
+  <div class="w-50 aling__solutions py-5">
+    <h3 class="text__green-title text-break" data-aos="fade-up">
       Precisando de
       desenvolvedores, ou de
       squads para seu produto?
