--- a/src/app/modules/solutions/components/solutions-page-why-choose/solutions-page-why-choose.component.html
+++ b/src/app/modules/solutions/components/solutions-page-why-choose/solutions-page-why-choose.component.html
@@ -8,7 +8,7 @@
     />
   </div>
   <div class="w-50 aling__texts ">
-    <h3 class="text__green-title mt-3" data-aos="fade-up">
+    <h3 class="text__green-title mt-3 w-100" data-aos="fade-up">
       Por que escolher uma
       squad ágil para seu
       projeto?
