--- a/src/app/modules/solutions/components/solutions-page-why-contract/solutions-page-why-contract.component.html
+++ b/src/app/modules/solutions/components/solutions-page-why-contract/solutions-page-why-contract.component.html
@@ -12,7 +12,7 @@
       <li class="text__solution" data-aos="fade-up">Custo fixo.</li>
     </ul>
   </div>
-    <div class="w-50 py-2">
+    <div class="bot-image w-50 py-2">
       <img loading="lazy" src="assets/backgrounds/bg-solu-bot.webp" alt="bg-solu-bot"
       width="90%" class="pb-3 px-5"  data-aos="fade-up">
     </div>
